# ragnador-automate

./: .gitignore  README.md  combi.js  index.js  input.py  main.py  package-lock.json  package.json  pyproject.toml
tests/: test_ragnador.py
