[tool.poetry]
name = "ragnador"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"
Pillow = "^9.0.0"
opencv-contrib-python = "^4.5.5"
PyDirectInput = "^1.0.4"
PyAutoIt = "^0.6.5"
pyocr = "^0.8.1"
cloudscraper = "^1.2.58"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
